--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_derive = "1.0.145"
 serde_json = "1.0.86"
 tokio = { version = "1.21.2", features = ["full"] }
 colored = "2.0.0"
+rand = "0.8.5"
+dialoguer = "0.10.2"
 
 [dependencies.mongodb]
 version = "2.3.1"
